[gd_scene load_steps=17 format=3 uid="uid://dt8o3e63inrbm"]

[ext_resource type="PackedScene" uid="uid://ilxdyw2i1d5x" path="res://Scenes/player.tscn" id="1_bo1nx"]
[ext_resource type="Script" uid="uid://b634ujgu4qsxf" path="res://Scripts/main.gd" id="1_kry3j"]
[ext_resource type="Script" uid="uid://dh7rh1716l43m" path="res://Scripts/camera.gd" id="2_21xkr"]
[ext_resource type="Theme" uid="uid://cvloyy7ohf1jt" path="res://Assets/Resources/main_theme.tres" id="6_6bp64"]
[ext_resource type="Script" uid="uid://bpof4b1ktoojx" path="res://Scripts/ui.gd" id="7_344ge"]
[ext_resource type="Script" uid="uid://de5ogqntd17vq" path="res://Scripts/level_selector.gd" id="8_344ge"]

[sub_resource type="Gradient" id="Gradient_kry3j"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.203, 0.7, 0.633733, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_21xkr"]
gradient = SubResource("Gradient_kry3j")

[sub_resource type="Gradient" id="Gradient_6bp64"]
offsets = PackedFloat32Array(0, 0.33, 1)
colors = PackedColorArray(0.008, 0.08, 0.008, 1, 0.0312, 0.12, 0.0312, 1, 0.0312, 0.12, 0.0312, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_344ge"]
gradient = SubResource("Gradient_6bp64")
width = 1920
height = 2160
fill_from = Vector2(1, 1)

[sub_resource type="Animation" id="Animation_hptm8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/SplashScreen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1080)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/SplashScreen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/MainMenu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/MainMenu:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("UI/LevelMenu:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("UI/LevelMenu:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("UI/SplashScreen:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_344ge"]
resource_name = "game_to_levels"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/LevelMenu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/LevelMenu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/MainMenu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/SplashScreen:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_d1ilt"]
resource_name = "levels_to_game"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/LevelMenu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/LevelMenu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/MainMenu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/SplashScreen:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6iyac"]
resource_name = "main_to_levels"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/MainMenu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/MainMenu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/LevelMenu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/LevelMenu:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("UI/SplashScreen:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ynf5e"]
resource_name = "splash_to_main"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/SplashScreen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -2160), Vector2(0, 1080)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/SplashScreen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/SplashScreen:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d1ilt"]
_data = {
&"RESET": SubResource("Animation_hptm8"),
&"game_to_levels": SubResource("Animation_344ge"),
&"levels_to_game": SubResource("Animation_d1ilt"),
&"main_to_levels": SubResource("Animation_6iyac"),
&"splash_to_main": SubResource("Animation_ynf5e")
}

[node name="Main" type="Node" groups=["Main"]]
script = ExtResource("1_kry3j")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(50, 0)
zoom = Vector2(3, 3)
script = ExtResource("2_21xkr")

[node name="Player" parent="." instance=ExtResource("1_bo1nx")]
position = Vector2(50, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_6bp64")
script = ExtResource("7_344ge")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="TriesHUD" type="HBoxContainer" parent="CanvasLayer/UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="MainMenu" type="TextureRect" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_21xkr")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 76
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 231
text = "[ Sporulate ]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 7

[node name="Levels" type="Button" parent="CanvasLayer/UI/MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(543.83, 130)
layout_mode = 2
focus_mode = 0
text = "Levels"

[node name="Options" type="Button" parent="CanvasLayer/UI/MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(543.83, 130)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "Options"

[node name="Quit" type="Button" parent="CanvasLayer/UI/MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(543.83, 130)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "Quit"

[node name="LevelMenu" type="TextureRect" parent="CanvasLayer/UI"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_21xkr")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI/LevelMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 215

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/LevelMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 26
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/UI/LevelMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 196
text = "Levels"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer" type="GridContainer" parent="CanvasLayer/UI/LevelMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 5
script = ExtResource("8_344ge")

[node name="SplashScreen" type="TextureRect" parent="CanvasLayer/UI"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -2160.0
offset_right = 960.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("GradientTexture2D_344ge")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/UI"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_d1ilt")
}
autoplay = "splash_to_main"

[connection signal="pressed" from="CanvasLayer/UI/MainMenu/MarginContainer/VBoxContainer/VBoxContainer/Levels" to="CanvasLayer/UI" method="_on_levels_pressed"]
[connection signal="animation_finished" from="CanvasLayer/UI/AnimationPlayer" to="CanvasLayer/UI" method="_on_animation_finished"]
